--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "author": "Albert Alexander Jacobsz",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongo": "^0.1.0",
     "mongodb": "^4.1.1",
     "mongoose": "^6.0.5",
